--- a/styles.css
+++ b/styles.css
@@ -9,3 +9,138 @@
     margin-bottom: 20px;
     padding: 30px;
 }
+
+/* VALUE BOX */
+.contenedor-loco {
+    width: 100%;
+    height: 100%;
+    background: var(--Neutro---Neutro-200, #F9F9F9);
+    border-radius: 8px;
+    justify-content: flex-start;
+    align-items: center;
+    display: inline-flex;
+  }
+  
+  .encabezado-chido {
+    height: 49px;
+    min-width: 64px;
+    padding: 8px;
+    background: #054C32;
+    border-top-left-radius: 8px;
+    border-bottom-left-radius: 8px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    display: inline-flex;
+  }
+  
+  .texto-promedio {
+    align-self: stretch;
+    color: var(--Neutro---Neutro-100, white);
+    font-size: 10px;
+    font-weight: 700;
+    word-wrap: break-word;
+  }
+  
+  .valor-promedio {
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    color: var(--Neutro---Neutro-100, white);
+    font-size: 20px;
+    font-weight: 700;
+    word-wrap: break-word;
+  }
+  
+  .contenedor-valores {
+    width: 92px;
+    height: 49px;
+    padding-left: 8px;
+    padding-right: 8px;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 4px;
+    display: flex;
+  }
+  
+  .valor-divertido {
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    display: inline-flex;
+  }
+  
+  .etiqueta-rara {
+    align-self: stretch;
+    min-width: 45px;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 8px;
+    display: inline-flex;
+  }
+  
+  .texto-etiqueta {
+    flex: 1 1 0;
+    color: var(--Neutro---Neutro-800, #161A1D);
+    font-size: 8px;
+    font-weight: 400;
+    word-wrap: break-word;
+  }
+  
+  .numero-valor {
+    color: var(--Neutro---Neutro-800, #161A1D);
+    font-size: 14px;
+    font-weight: 600;
+    word-wrap: break-word;
+  }
+
+
+  /* VALUE BOX 2 */
+.estilo-fondo {
+    width: 100%; height: 49px; padding: 8px 16px;
+    border-radius: 8px;
+    display: flex; flex-direction: column;
+    justify-content: center; 
+  }
+  
+  .estilo-titulo {
+    margin-top: -4px
+  }
+  
+  .estilo-titulo-texto {
+    color: white; 
+    font-size: 8px; 
+    font-weight: 500;
+  }
+  
+  .estilo-subtitulo {
+    color: white; 
+    font-size: 8px; 
+    font-weight: 300;
+  }
+  
+  .estilo-valor {
+    color: white; font-size: 20px; font-weight: 700;
+    display: flex; flex-direction: column; justify-content: center;
+  }
+
+
+  /* CUSTOM ROW */
+  .acomoda_boxes_primero{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-content: center;
+    justify-content: space-around;
+    align-items: center;
+    text-align: left;
+    text-align: center;
+    margin: 0px 0px 3px 0px;
+  
+}
+
+.acomoda_boxes{
+    display: flex;
+    flex-direction: column;
+}
